# phobzstudio

./: .gitignore  README.md  flake.nix  justfile
core/: Cargo.toml
core/benches/: audio_bench.rs  render_bench.rs
core/examples/: render_synthetic.rs
core/src/: lib.rs
core/src/audio/: analysis.rs  analyzer.rs  fft.rs  loader.rs  mod.rs  synth.rs
core/src/designs/: bars.rs  circular.rs  frame_corners.rs  frame_perimeter.rs  mod.rs  params.rs  particles.rs  registry.rs  spectrogram.rs  spectrum_mountain.rs  waveform_line.rs
core/src/export/: mod.rs
core/src/gpu/: context.rs  design_renderer.rs  layouts.rs  mod.rs  pipeline.rs  pipelines.rs  postprocess.rs  renderer.rs  textures.rs
core/src/gpu/compute/: buffers.rs  fft.rs  mod.rs  params.rs  pipelines.rs  spectrum.rs
core/src/gpu/shaders/: bloom.wgsl  blur.wgsl  design.wgsl  fft.wgsl  waveform.wgsl
core/src/pipeline/: mod.rs
core/src/render/: mod.rs
core/src/video/: encoder.rs  mod.rs
core/tests/: audio_tests.rs  design_fixtures.rs  design_tests.rs  gpu_fft_tests.rs
docs/: ARCHITECTURE.md  SETUP.md
python/: phobz_visualizer.pyi  pyproject.toml
python/phobz_viz/: __init__.py  cli.py  platforms.py
python/tests/: __init__.py  test_core.py
scripts/: generate_test_audio.py
