[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "phobz-viz"
version = "0.1.0"
description = "GPU-accelerated audio visualization for music producers"
readme = "../README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video",
]
keywords = ["audio", "visualization", "waveform", "video", "music"]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pydantic>=2",
    "cffi>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.1",
]

[project.scripts]
phobz-viz = "phobz_viz.cli:app"

[project.urls]
Repository = "https://github.com/Quadriphobs1/phobzstudio"

[tool.maturin]
manifest-path = "../core/Cargo.toml"
python-source = "."
module-name = "phobz_visualizer"
features = ["python", "pyo3/extension-module"]
bindings = "pyo3"
include = ["phobz_viz/py.typed", "phobz_visualizer.pyi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
